scripts/kubernetes/base/frontend/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: ns-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
